--- a/css/layouts/desktop.css
+++ b/css/layouts/desktop.css
@@ -1,3 +1,7 @@
+header, aside, #section-c, #section-d, #section-efgh span, #section-i {
+  background: rgb(235, 104, 89);
+}
+
 header {
   width: 960px;
   height: 100px;
@@ -32,9 +36,8 @@ aside {
 }
 
 #section-efgh {
-  width: 760px;
   margin: auto;
-  display: inline-block;
+  display: inline;
 }
 
 #section-efgh span {
@@ -42,7 +45,6 @@ aside {
   height: 250px;
   float: left;
   line-height: 250px;
-  margin-bottom: -3px;
 }
 
 #section-i {
