--- a/css/layouts/mobile.css
+++ b/css/layouts/mobile.css
@@ -1,3 +1,7 @@
+header, aside, #section-c, #section-d, #section-efgh span, #section-i {
+  background: lightseagreen;
+}
+
 header {
   width: 480px;
   height: 75px;
